--- a/style.css
+++ b/style.css
@@ -1,78 +1,81 @@
+body{
+    align-items: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+    padding: 20px;
+}
+
+.banner {
+    width: 100%;
+    margin-top: 20px;
+}
+
 .picture2 {
     margin-top: 50px;
-    margin-left: 500px;
 }
 
 .helloH {
-    margin-left: 60px;
     color: darkred;
 }
 
 .helloP {
-    margin-left: -110px;
-    font-weight:400 ;
+    font-weight: 400;
 }
 
 .mySkills {
-    margin-left: 530px ;
     color: darkred;
 }
 
 .dnd {
-    margin-left: 510px;
     font-weight: 700;
     color: darkred;
 }
 
-.dndp {
-    margin-left: 510px;
-}
-
 .eye1 {
-    margin-left: 290px;
-    margin-top: -180px;
-    
+    margin-left: -670px;
+    margin-top: -290px;
 }
 
 .eye2 {
-    margin-left: 890px;
-    margin-top: -70px;
-}
-
-.get {
-    margin-left: 500px;
+    margin-left: 680px;
+    margin-top: -30px;
 }
 
 .love {
-    margin-left: 470px;
     color: darkred;
-}
-
-.coke {
-    margin-left: 250px;
 }
 
 button {
     background-color: darkred;
     width: 100px;
-    height: 36px;
+    height: 50px;
     border-radius: 5px;
-    margin-left: 530px;
     border: none;
+    color: white;
 }
+
+button a {
+    color: white;
+    text-decoration: none;
+}
+
 
 footer {
     background-color: darkred;
     height: 50px;
-    width: 1250px;
+    width: 100%;
     padding: 40px 0;
+    margin-top: 20px;
 }
 
 .footer-container {
     gap: 40px;
     display: flex;
     justify-content: center;
-    margin-left: -100px;
-
 }
 
+.footer-container a {
+    color: white;
+}
